wp-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: wordpress
  name: wp-service
spec:
  type: LoadBalancer
  externalIPs:
  - 35.186.192.108
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: wordpress
