basic-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: basic-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: ateia-kubernetes
spec:
  backend:
    serviceName: wordpress
    servicePort: 80
