ingress-service.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: static-ip-wordpress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "ateia-kubernetes"
    kubernetes.io/ingress.class: "gce"
spec:
  tls:
  # This assumes tls-secret exists.
  - secretName: tls-secret
  backend:
    # This assumes http-svc exists and routes to healthy endpoints.
    serviceName: wordpress
    servicePort: 80
